syntax = "proto3";
package msg.req;

import "Req.UserLogin.proto";

option java_package = "io.evelynn.base.proto";
option java_outer_classname = "ReqUserLoginMsgProto";

option csharp_namespace = "Evelynn.Base.Request";

message ReqUserLoginMsg {
	.req.UserLoginField login = 1;
	int32 request_id = 2;
}
