syntax = "proto3";
package msg.sub;

import "Sub.MarketData.proto";

option java_package = "io.evelynn.base.proto";
option java_outer_classname = "SubMarketDataMsgProto";

option csharp_namespace = "Evelynn.Base.Subscription";

message SubMarketDataMsg {
	.sub.SubMarketDataField subscribe = 1;
}